--- a/gragra e felipe/index.html
+++ b/gragra e felipe/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./css/style.css">
 
   <script src="./env.js"></script>
+  <script type="module" src="./seu-script.js"></script>
   
 </head>
 <body>
